# ccp-battle-test-main

./: CMakeLists.txt  KNOWN_ISSUES.md
scenarios/: all_cells_spawn.txt  collision_spawn.txt  out_of_bounds.txt  overcrowded.txt  same_id_spawned.txt  tiny_map.txt
src/: main.cpp
src/Core/: Environment.cpp  Environment.hpp  EnvironmentInitializer.hpp  Simulation.hpp
src/Features/: Hunter.cpp  Hunter.hpp  Object.hpp  Swordsman.cpp  Swordsman.hpp  Unit.cpp  Unit.hpp
src/IO/Events/: UnitNotSpawned.hpp  Winner.hpp
